package com.gestaopagamentos.enums;

public enum Fee {
    SIMPLE_FEE,
    COMPOUND_FEE,
    COSTUMIZED_FEE
}
