package com.gestaopagamentos.enums;

public enum PaymentMethod {
    PIX,
    CREDIT,
    DEBIT,
    MONEY
}
