package com.gestaopagamentos.models;

import java.time.LocalDate;

public class FinancePlanning {
    private Long id;
    private String name;
    private String description;
    private LocalDate deadline;
    private Double amount;
    private String typeOfCurrency;
}
