package com.gestaopagamentos.services;

public class AuthService {
    public void register(){

    }

    public void login(){

    }
}
