package com.gestaopagamentos.services;

import com.gestaopagamentos.models.FixedRevenue;
import com.gestaopagamentos.models.RevenueLog;
import com.gestaopagamentos.models.VariedRevenue;

public class RevenueService {
    public void registerFixedRevenue(FixedRevenue fixedRevenue){

    }
    public void getFixedRevenue(Long id){

    }
    public void getAllFixedRevenues(){

    }
    public void updateFixedRevenue(Long id, FixedRevenue fixedRevenue){

    }
    public void deleteFixedRevenue(Long id){

    }

    public void registerVariedRevenue(VariedRevenue variedRevenue){

    }
    public void getVariedRevenue(Long id){

    }
    public void getLatest20VariedRevenues(){

    }
    public void getLatestNotSchedule20VariedRevenues(){

    }
    public void getAllScheduledVariedRevenues(){

    }
    public void updateVariedRevenues(Long id, VariedRevenue variedRevenue) {

    }
    public void deleteVariedRevenue(Long id){

    }

    private void createRevenueLog(RevenueLog revenueLog){

    }
    public void getRevenueLog(){

    }
    private void updateRevenueLog(RevenueLog revenueLog){

    }
    private void deleteRevenueLog(){

    }
}
